test/sematest/invalid/comparison_operators7.java
class B {

}

class A {
  public static void main(String[] args) {
    new B() < true;
  }
}